--- a/photogallery/index.html
+++ b/photogallery/index.html
@@ -4,6 +4,7 @@
 	<!-- Jason Dhillon
 		 1/23/17
 		 Test site for learning -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	
