--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
 		 1/23/17
 		 Test site for learning -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	      
-	<link href="/css/home.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	
-<noscript id="deferred-styles">
-      <link href="https://fonts.googleapis.com/css?family=Oswald|Ubuntu" rel="stylesheet">
+    <noscript id="deferred-styles">
 	<link href="/css/home.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     </noscript>
     <script>
       var loadDeferredStyles = function() {
