--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 	
-    <noscript id="deferred-styles">
-	<link href="/css/home.css" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+<noscript id="deferred-styles">
+      <link href="https://fonts.googleapis.com/css?family=Oswald|Ubuntu" rel="stylesheet">
+	<link href="css/home.css" rel="stylesheet" type="text/css">
     </noscript>
     <script>
       var loadDeferredStyles = function() {
@@ -46,7 +46,7 @@
 			img.src = array[i];
 		    }
 		}
-		preloadImages([ "img/main.jpg", "img/logo.png", "img/3hour.jpg", "img/5hour.jpg", "img/7hour.jpg", "img/9hour.jpg", "img/aboutme.jpg", "img/facebook.svg", "img/twitter.svg", "img/googleplus.svg", "img/instagram.svg", "img/youtube.svg", "img/menu.png", "img/video.jpg"]);
+		preloadImages(["img/3hour.jpg", "img/5hour.jpg", "img/7hour.jpg", "img/9hour.jpg", "img/aboutme.jpg", "img/facebook.svg", "img/twitter.svg", "img/googleplus.svg", "img/instagram.svg", "img/youtube.svg", "img/logo.png", "img/menu.png", "img/main.jpg", "img/video.jpg"]);
 </script>
 
 <!-- NavBar -->
@@ -129,8 +129,8 @@
 	<center><iframe width="100%" height="400px" src="https://www.youtube.com/embed/OxSN03L93Co" frameborder="0" allowfullscreen></iframe></center>
 </div>
 
-<!-- Fishing Blog -->
-<div>
+<!-- Blog -->
+<div id="normalblog">
 	<h1>LATEST FISHING REPORTS</h1>
 	<p>Weekly Updates</p>
 	<br>
@@ -217,6 +217,50 @@
 			</div>
 		</tr>
 	</table>
+
+	<center><button class="moreReports"><a class="reports" href="/fishingreports/index.html">MORE REPORTS</a></button></center>
+</div>
+<div id="mobileblog">
+	<h1>LATEST FISHING REPORTS</h1>
+	<p>Weekly Updates</p>
+	<br>
+				<div class="blog">
+					<hr>
+						<img src="img/blog1.jpg" width="100%" height="auto;" style="padding: 20px; margin: auto;" >
+						<h3>UNCATEGORIZED</h3>
+						<h1 style="text-align: left;">Incredible Tailing Redfish Action!</h1>
+						<p style="text-align: left;">Incredible Tailing Redfish Action! Winter
+							is that magical time of the year when Redfish
+							really turn on and start offering pure sight
+							casting opportunities. For the past 3 to …</p>
+						<br>
+				</div>
+
+
+			<div class="blog">
+					<hr>
+					<img src="img/blog2.jpg" width="100%" height="auto;" style="padding: 20px; margin: auto;" >
+					<h3>UNCATEGORIZED</h3>
+					<h1 style="text-align: left;">Huge Mosquito Lagoon Red Fish</h1>
+					<p style="text-align: left;"> Huge Mosquito Lagoon Red Fish
+						are here in Florida once again and that means it’s
+						time for the fall Mullet run. The Mullet run triggers
+						a feeding frenzy for big …</p>
+					<br>
+			</div>
+
+
+			<div class="blog">
+					<hr>
+					<img src="img/blog3.jpg" width="100%" height="auto;" style="padding: 20px; margin: auto;" >
+					<h3>UNCATEGORIZED</h3>
+					<h1 style="text-align: left;">Orlando Fishing Trip</h1>
+					<p style="text-align: left;">Orlando fishing trips and
+						guided fishing tours near orlando have been on a
+						rise over the past few years. Vacationing families
+						from around the globe have discovered phenomenal fishing just …</p>
+					<br>
+			</div>
 
 	<center><button class="moreReports"><a class="reports" href="/fishingreports/index.html">MORE REPORTS</a></button></center>
 </div>
