--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		 1/23/17
 		 Test site for learning -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="css/critical.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -30,7 +31,7 @@
 		}
 		preloadImages(["img/menu.png","img/logo.png", "img/main.jpg", "img/3hour.jpg", "img/5hour.jpg", "img/7hour.jpg", "img/9hour.jpg", "img/aboutme.jpg", "img/facebook.svg", "img/twitter.svg", "img/googleplus.svg", "img/instagram.svg", "img/youtube.svg", "img/video.jpg"]);
 	</script>
-	
+
 	<noscript id="deferred-styles">
 		<link href="css/home.css" rel="stylesheet" type="text/css">
     	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
