--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 			position: fixed;
 			width: 100%;
 			z-index: 2;
+			background-color: white;
 		}
 
 		li:active a{
@@ -453,7 +454,7 @@
 	<p>Weekly Updates</p>
 	<br>
 
-	<table style="margin: auto; width:80%;">	
+	<table style="width:80%;">	
 		<tr>
 				<div class="blog">
 					<hr>
@@ -536,13 +537,13 @@
 		</tr>
 	</table>
 
-	<center><button class="moreReports"><a class="reports" href="/fishingreports/index.html">MORE REPORTS</a></button></center>
+	<center><button class="moreReports"><a class="reports" href="fishingreports/index.html">MORE REPORTS</a></button></center>
 </div>
 <div id="mobileblog">
 	<h1>LATEST FISHING REPORTS</h1>
 	<p>Weekly Updates</p>
 	<br>
-				<div class="blog">
+			<div class="blog">
 					<hr>
 						<img src="img/blog1.jpg" width="100%" height="auto;" style="padding-top: 20px; margin: auto;" >
 						<h3>UNCATEGORIZED</h3>
@@ -580,21 +581,21 @@
 					<br>
 			</div>
 
-	<center><button class="moreReports"><a class="reports" href="/fishingreports/index.html">MORE REPORTS</a></button></center>
+	<center><button class="moreReports"><a class="reports" href="fishingreports/index.html">MORE REPORTS</a></button></center>
 </div>
 
 <!-- Contact Form -->
-<div style="position: relative; padding-top: 50px; background-color: #f7faff;">
-	<h4 style="text-align: center;">I'D LOVE TO HEAR FROM YOU</h3>
+<div style="padding-top: 50px; background-color: #f7faff;">
+	<h4 style="text-align: center;">I'D LOVE TO HEAR FROM YOU</h4>
 	<h1 style="letter-spacing: 3px">CONTACT ME ANY TIME</h1>
 	<br>
-	<h4 style="text-align: center;">Lets Go Fishing!</h3>
-	
+	<h4 style="text-align: center;">Lets Go Fishing!</h4>
+	<br><br><br>
 	
 
-	<table style="margin-left: 200px; width:100%">
+	<table>
 		<tr>
-			<td style="width: 50%;">
+			<td>
 				<form action="mail.php" method="post">
 					<label for="name">NAME</label>
 					<input id="name" type="text" required name="name">
@@ -611,17 +612,17 @@
 					<br>
 					<label for="message">YOUR MESSAGE</label>
 					<textarea id="message" name="message" cols="25" rows="5"></textarea>
-
+					<br>
 					<input type="submit" name="submit" value="Submit">
-
+					<br><br><br>
 				</form>
 			</td>
 
-			<td style="width: 50%;">
-				<div;>
+			<td id="contact_pc">
+				<div>
 					<h1 style="text-align: unset">Hours of Operation:</h1>
-					<h4>Through Sunday open 6am to 10pm</h4>
-					<br>
+					<h4>Monday through Sunday open 6am to 10pm</h4>
+					<br><br><br><br>
 					<h1 style="text-align: unset">Business Information:</h1>
 					<h4><img id="icon" src="img/location.png">1103 Garden ST. Titusville FL, 32796</h4>
 					<h4><img id="icon" src="img/phone.png">1-407-432-5138</h4>
@@ -629,18 +630,51 @@
 				</div>
 			</td>
 		</tr>
+
 	</table>
 </div>
 
 <!-- Footer -->
 <footer>
-	<p class="footer">THE SOCIAL THING</p>
-	<ul class="footer">
-		<li><a style="text-decoration: none;" href="https://www.facebook.com/Flataddicted"> <img src="img/facebook.svg" alt="" width="50px" height="50px"></li>
-		<li><a style="text-decoration: none;" href="https://twitter.com/flataddicted"> <img src="img/twitter.svg" alt="" width="50px" height="50px"></li>
-		<li><a style="text-decoration: none;" href="https://plus.google.com/+TomCarver"> <img src="img/googleplus.svg" alt="" width="50px" height="50px"></li>
-		<li><a style="text-decoration: none;" href="https://www.instagram.com/flataddicted/"> <img src="img/instagram.svg" alt="" width="50px" height="50px"></li>
-		<li><a style="text-decoration: none;" href="https://www.youtube.com/channel/UCXz5g_fsJJOgfADpsXqn34Q"> <img src="img/youtube.svg" alt="" width="50px" height="50px"></li>
+
+	<table style="width: 100%; table-layout: fixed" cellspacing="0" cellpadding="0">
+
+		<tr>
+			<td>
+				<p class="footer">THE SOCIAL THING</p>
+				<ul class="footer">
+					<li><a href="https://www.facebook.com/Flataddicted"> <img src="img/facebook.svg" alt="" width="50px" height="50px"></li>
+					<li><a href="https://twitter.com/flataddicted"> <img src="img/twitter.svg" alt="" width="50px" height="50px"></li>
+					<li><a href="https://plus.google.com/+TomCarver"> <img src="img/googleplus.svg" alt="" width="50px" height="50px"></li>
+					<li><a href="https://www.instagram.com/flataddicted/"> <img src="img/instagram.svg" alt="" width="50px" height="50px"></li>
+					<li><a href="https://www.youtube.com/channel/UCXz5g_fsJJOgfADpsXqn34Q"> <img src="img/youtube.svg" alt="" width="50px" height="50px"></li>
+				</ul>
+			</td>
+
+				
+			<td id="normalblog"style="padding-right: 100px; padding-top:50px; float: right;">
+					<h4>Monday through Sunday open 6am to 10pm</h4>
+					<h4><img id="icon" src="img/location.png">1103 Garden ST. Titusville FL, 32796</h4>
+					<h4><img id="icon" src="img/phone.png">1-407-432-5138</h4>
+					<h4><img id="icon" src="img/mail.png"><a style="text-decoration: underline; color:dodgerblue" href="mailto:flataddicted@gmail.com">flataddicted@gmail.com</a></h4>
+			</td>
+		</tr>
+
+		<tr>
+			<td id="mobileblog">
+				<ul style="margin: 0 auto; width: 400px; padding: 20px;">
+					<li class="footer"><h4>Monday through Sunday open 6am to 10pm</h4></li>
+					<li class="footer"><h4><img id="icon" src="img/location2.png">1103 Garden ST. Titusville FL, 32796</h4></li>
+					<li class="footer"><h4><img id="icon" src="img/phone2.png">1-407-432-5138</h4></li>
+					<li class="footer"><h4><img id="icon" src="img/mail2.png">
+						<a style="text-decoration: underline;
+					 	color:dodgerblue" href="mailto:flataddicted@gmail.com">
+						 flataddicted@gmail.com</a></h4></li>
+				</ul>
+			</td>
+		</tr>
+	</table>
+
 </footer>
 
 </body>
