--- a/fishingreports/blog0.html
+++ b/fishingreports/blog0.html
@@ -118,9 +118,9 @@
 					<h4>Monday through Sunday open 6am to 10pm</h4>
 					<br><br><br><br>
 					<h1 style="text-align: unset">Business Information:</h1>
-					<h4><img id="icon" src="img/location.png">1103 Garden ST. Titusville FL, 32796</h4>
-					<h4><img id="icon" src="img/phone.png">1-407-432-5138</h4>
-					<h4><img id="icon" src="img/mail.png"><a style="text-decoration: underline; color:dodgerblue" href="mailto:flataddicted@gmail.com">flataddicted@gmail.com</a></h4>
+					<h4><img id="icon" src="../img/location.png">1103 Garden ST. Titusville FL, 32796</h4>
+					<h4><img id="icon" src="../img/phone.png">1-407-432-5138</h4>
+					<h4><img id="icon" src="../img/mail.png"><a style="text-decoration: underline; color:dodgerblue" href="mailto:flataddicted@gmail.com">flataddicted@gmail.com</a></h4>
 				</div>
 			</td>
 		</tr>
